--- a/node-server/public/css/main.css
+++ b/node-server/public/css/main.css
@@ -85,27 +85,28 @@ ul.osx-dock li a {
 ul.osx-dock li a img {
     width: 48px;
 }
+@media screen and (min-width: 760px) {
+	ul.osx-dock li:hover {
+		margin-left: 9px;
+		margin-right: 9px;
+		z-index: 200;
+	}
 
-ul.osx-dock li:hover {
-    margin-left: 9px;
-    margin-right: 9px;
-    z-index: 200;
-}
+	ul.osx-dock li:hover a {
+		-webkit-transform-origin: center bottom;
+		-webkit-transform: scale(1.5);
+	}
 
-ul.osx-dock li:hover a {
-    -webkit-transform-origin: center bottom;
-    -webkit-transform: scale(1.5);
-}
+	ul.osx-dock li.nearby {
+		margin-left: 6px;
+		margin-right: 6px;
+		z-index: 100;
+	}
 
-ul.osx-dock li.nearby {
-    margin-left: 6px;
-    margin-right: 6px;
-    z-index: 100;
-}
-
-ul.osx-dock li.nearby a {
-    -webkit-transform-origin: center bottom;
-    -webkit-transform: scale(1.25);
+	ul.osx-dock li.nearby a {
+		-webkit-transform-origin: center bottom;
+		-webkit-transform: scale(1.25);
+	}
 }
 
 ul.osx-dock li span {
