--- a/node-server/public/css/main.css
+++ b/node-server/public/css/main.css
@@ -3,9 +3,8 @@ body {
 	padding: 0;
 	margin: 0;
 	background-color: #000;
-	color: dodgerblue;
+	color: white;
 }
-
 #container {
 	width: 100%;
 	height: 100%;
@@ -15,143 +14,153 @@ body {
 	-webkit-user-select: none;
 	-moz-user-select: none;
 }
-
 .motor-usage {
 	display: inline-block;
 	margin: 1em;
 }
-
 .inverted {
 	filter: grayscale(100%);
 	background: #fff;
 }
-
 .ion-ios-lightbulb-outline {
 	color: white
 }
 
 /* css for dock provided by http://zurb.com/playground/osx-dock under MIT License */
+
 div.cap {
-    display: block;
-    height: 100px;
-    width: 40px;
-    background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/151734/dock-background-left.png) bottom left no-repeat;
+	display: block;
+	height: 100px;
+	width: 40px;
+	background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/151734/dock-background-left.png) bottom left no-repeat;
 }
-
 div.cap.left {
-    position: absolute;
-    bottom: 0px;
-    left: 0px;
+	position: absolute;
+	bottom: 0px;
+	left: 0px;
 }
-
 div.cap.right {
-    background-position: right bottom;
-    position: absolute;
-    top: 0px;
-    right: 0px;
+	background-position: right bottom;
+	position: absolute;
+	top: 0px;
+	right: 0px;
 }
-
 ul.osx-dock {
-    display: inline-block;
-    height: 130px;
-    padding: 0 40px 0 0;
-    background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/151734/dock-background-left.png) no-repeat right bottom;
-    overflow: hidden;
-    margin: 0 0 0 40px;
+	display: inline-block;
+	height: 130px;
+	padding: 0 40px 0 0;
+	background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/151734/dock-background-left.png) no-repeat right bottom;
+	overflow: hidden;
+	margin: 0 0 0 40px;
 }
-
 ul.osx-dock li {
-    display: block;
-    position: relative;
-    float: left;
-    width: 50px;
-    height: 50px;
-    margin: 60px 0 4px 0;
-    -webkit-transition: 0.15s linear;
-    -webkit-transition-property: -webkit-transform margin;
-    text-align: center;
+	display: block;
+	position: relative;
+	float: left;
+	width: 30px;
+	height: 50px;
+	margin: 90px 0 10px 0;
+	-webkit-transition: 0.15s linear;
+	-webkit-transition-property: -webkit-transform margin;
+	text-align: center;
 }
-
 ul.osx-dock li a {
-    display: block;
-    height: 50px;
-    padding: 0 1px;
-    -webkit-transition: 0.15s linear;
-    -webkit-transition-property: -webkit-transform margin;
-    margin: 0;
-    -webkit-box-reflect: below 2px -webkit-gradient(linear,left top,left bottom,from(transparent),color-stop(0.45,transparent),to(rgba(255,255,255,0.25)));
+	display: block;
+	height: 50px;
+	padding: 0 1px;
+	-webkit-transition: 0.15s linear;
+	-webkit-transition-property: -webkit-transform margin;
+	margin: 0;
+	-webkit-box-reflect: below 2px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(0.45, transparent), to(rgba(255, 255, 255, 0.25)));
 }
-
 ul.osx-dock li a img {
-    width: 48px;
+	width: 24px;
 }
 @media screen and (min-width: 760px) {
+	#shutdown_fake {
+		position: absolute;
+		left: 40%;
+		bottom: -15%;
+	}
+	#invert {
+		position: absolute;
+		left: 40%;
+		bottom: -15%;
+		z-index: 10;
+		font-size: 2.5em;
+	}
+	ul.osx-dock li {
+		display: block;
+		position: relative;
+		float: left;
+		width: 50px;
+		height: 50px;
+		margin: 60px 0 4px 0;
+		-webkit-transition: 0.15s linear;
+		-webkit-transition-property: -webkit-transform margin;
+		text-align: center;
+	}
 	ul.osx-dock li:hover {
 		margin-left: 9px;
 		margin-right: 9px;
 		z-index: 200;
 	}
-
 	ul.osx-dock li:hover a {
 		-webkit-transform-origin: center bottom;
 		-webkit-transform: scale(1.5);
 	}
-
 	ul.osx-dock li.nearby {
 		margin-left: 6px;
 		margin-right: 6px;
 		z-index: 100;
 	}
-
 	ul.osx-dock li.nearby a {
 		-webkit-transform-origin: center bottom;
 		-webkit-transform: scale(1.25);
 	}
+	ul.osx-dock li a img {
+		width: 48px;
+	}
 }
-
 ul.osx-dock li span {
-    background: rgba(0,0,0,0.75);
-    position: absolute;
-    bottom: 80px;
-    margin: 0 auto;
-    display: none;
-    width: auto;
-    font-size: 11px;
-    font-weight: bold;
-    padding: 3px 6px;
-    -webkit-border-radius: 6px;
-    color: #fff;
+	background: rgba(0, 0, 0, 0.75);
+	position: absolute;
+	bottom: 80px;
+	margin: 0 auto;
+	display: none;
+	width: auto;
+	font-size: 11px;
+	font-weight: bold;
+	padding: 3px 6px;
+	-webkit-border-radius: 6px;
+	color: #fff;
 }
-
 ul.osx-dock li:hover span {
-    display: block;
+	display: block;
 }
-
 div#dockContainer {
-    position: fixed;
-    bottom: 12px;
-    height: 120px;
-    padding: 50px 0 0;
-    text-align: center;
-    -webkit-border-radius: 6px;
-    -moz-border-radius: 6px;
-    width: 100%;
-    line-height: 1;
-    z-index: 100;
+	position: fixed;
+	bottom: 12px;
+	height: 120px;
+	padding: 50px 0 0;
+	text-align: center;
+	-webkit-border-radius: 6px;
+	-moz-border-radius: 6px;
+	width: 100%;
+	line-height: 1;
+	z-index: 100;
 }
-
 div#dockWrapper {
-    width: auto;
-    display: inline-block;
-    position: relative;
-    border-bottom: solid 2px rgba(255,255,255,.35);
-    line-height: 0;
+	width: auto;
+	display: inline-block;
+	position: relative;
+	border-bottom: solid 2px rgba(255, 255, 255, .35);
+	line-height: 0;
 }
-
-#dockContainer,#dockContainer * {
-    -webkit-box-sizing: content-box;
-    -moz-box-sizing: content-box;
-    box-sizing: content-box;
+#dockContainer, #dockContainer * {
+	-webkit-box-sizing: content-box;
+	-moz-box-sizing: content-box;
+	box-sizing: content-box;
 }
 .modalDialog {
 	position: fixed;
@@ -160,22 +169,20 @@ div#dockWrapper {
 	right: 0;
 	bottom: 0;
 	left: 0;
-	background: rgba(0,0,0,0.8);
+	background: rgba(0, 0, 0, 0.8);
 	z-index: 99999;
-	opacity:0;
+	opacity: 0;
 	-webkit-transition: opacity 400ms ease-in;
 	-moz-transition: opacity 400ms ease-in;
 	transition: opacity 400ms ease-in;
 	pointer-events: none;
 }
-
 .modalDialog:target {
-	opacity:1;
+	opacity: 1;
 	pointer-events: auto;
 }
-
-.modalDialog > div {
-	width: 400px;
+.modalDialog>div {
+	width: 80%;
 	position: relative;
 	margin: 20% auto;
 	padding: 5px 20px 13px 20px;
@@ -185,7 +192,6 @@ div#dockWrapper {
 	background: -webkit-linear-gradient(#fff, #999);
 	background: -o-linear-gradient(#fff, #999);
 }
-
 .close {
 	background: #606061;
 	color: #FFFFFF;
@@ -204,5 +210,121 @@ div#dockWrapper {
 	-webkit-box-shadow: 1px 1px 3px #000;
 	box-shadow: 1px 1px 3px #000;
 }
-
-.close:hover { background: #00d9ff; }
+.close:hover {
+	background: #00d9ff;
+}
+ul#clawcontrol {
+	position: absolute;
+	margin: auto;
+	top: 0;
+	left: 0;
+	bottom: 25%;
+	right: 0;
+}
+#clawcontrol li {
+	float: left;
+}
+input[type=range] {
+	-webkit-appearance: none;
+	width: 50%;
+	background: #000;
+}
+input[type=range]:focus {
+	outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+	width: 100%;
+	height: 12.6px;
+	cursor: pointer;
+	box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+	background: #928483;
+	border-radius: 6.2px;
+	border: 0.7px solid #562425;
+}
+input[type=range]::-webkit-slider-thumb {
+	box-shadow: 1px 1px 1px #050000, 0px 0px 1px #1f0000;
+	border: 2.2px solid #000000;
+	height: 50px;
+	width: 19px;
+	border-radius: 2px;
+	background: gray;
+	cursor: pointer;
+	-webkit-appearance: none;
+	margin-top: -19.4px;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+	background: #ffffff;
+}
+#smaller {
+	width: 10%
+}
+fieldset, fieldset>* {
+	margin: auto;
+	text-align: center
+}
+fieldset {
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0%;
+	right: 0;
+	height: 60%;
+}
+.arm_controls {
+	width: 80%
+}
+.md_controls {
+	width: 60%
+}
+fieldset>* {
+	vertical-align: middle;
+}
+.leftlabel, .rightlabel {
+	display: inline-block;
+	width: 50px;
+	margin-top: 1em;
+	padding: 2px;
+	text-align: center;
+	font-weight: bold;
+}
+.leftlabel {
+	background-color: red;
+	color: white;
+}
+.rightlabel {
+	background-color: green;
+	color: white;
+}
+label {
+	display: inline-block;
+	width: 50px;
+}
+.arrow {
+	font-size: 2em
+}
+@media screen and (max-width: 760px) {
+	fieldset {
+		width: 95%
+	}
+	.input[type=range] {
+		width: 20%;
+	}
+	#shutdown_fake {
+		position: absolute;
+		left: 100%;
+		bottom: 0%;
+		font-size: 1.5em;
+	}
+	#invert {
+		position: absolute;
+		left: 100%;
+		bottom: 0%;
+		z-index: 10;
+		font-size: 1.5em;
+	}
+}
+.control_label {
+	display: block;
+	margin-bottom: 1em;
+	text-decoration: underline
+}
