--- a/node-server/public/css/main.css
+++ b/node-server/public/css/main.css
@@ -5,6 +5,18 @@ body {
 	background-color: #000;
 	color: white;
 }
+.arm_controls ul {
+	list-style-type: none;
+	position: relative;
+	top: 10%;
+	left: 0;
+	bottom: 0%;
+	right: 0;
+}
+.arm_controls ul li {
+	float: left;
+	padding-left: 1em;
+}
 #container {
 	width: 100%;
 	height: 100%;
@@ -134,9 +146,9 @@ ul.osx-dock li:hover span {
 }
 div#dockContainer {
 	position: fixed;
-	bottom: 12px;
-	height: 120px;
-	padding: 50px 0 0;
+	bottom: 8px;
+	height: 80px;
+	padding: 60px 0 0;
 	text-align: center;
 	-webkit-border-radius: 6px;
 	-moz-border-radius: 6px;
@@ -149,6 +161,7 @@ div#dockWrapper {
 	display: inline-block;
 	position: relative;
 	line-height: 0;
+	bottom: 1.5em
 }
 #dockContainer, #dockContainer * {
 	-webkit-box-sizing: content-box;
@@ -293,14 +306,19 @@ label {
 	width: 50px;
 }
 .arrow {
-	font-size: 3em
+	font-size: 3em;
+	z-index: 1000
+}
+.arrow:hover {
+	color: green
 }
 @media screen and (max-width: 760px) {
 	fieldset {
 		width: 95%
 	}
 	.arm_controls {
-		height: 70%
+		height: 60%;
+		bottom: 10%
 	}
 	.input[type=range] {
 		width: 20%;
@@ -318,6 +336,13 @@ label {
 	}
 	ul.osx-dock li {
 		padding-right: 0px
+	}
+	div#dockContainer {
+		bottom: 12px;
+		height: 120px;
+	}
+	div#dockWrapper {
+		bottom: 0em
 	}
 
 }
