--- a/node-server/public/css/main.css
+++ b/node-server/public/css/main.css
@@ -5,15 +5,6 @@ body {
 	background-color: #000;
 	color: white;
 }
-.arm_controls ul {
-	list-style-type: none;
-	width: 100%;
-	margin: 10% auto 0 auto;
-}
-.arm_controls ul li {
-	float: left;
-	padding-left: 1em;
-}
 #container {
 	width: 100%;
 	height: 100%;
@@ -276,6 +267,21 @@ fieldset {
 .arm_controls {
 	width: 80%
 }
+.arm_controls {
+	text-align: center;
+}
+.arm_controls ul {
+	padding:0; 
+    margin:0;
+    display: flex;
+    list-style: none;
+    justify-content:center;
+}
+.arm_controls ul li {
+	display: inline;
+	padding-left: 1em;
+	padding-right: 1em
+}
 .md_controls {
 	width: 60%
 }
@@ -359,4 +365,3 @@ label {
 .ion-arrow-left-b {
 	padding-right: 1.5em
 }
-
